--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,17 +1,8 @@
-#port: "8000"
-#
-#postgres:
-#	username: "postgres"
-#	host: "localhost"
-#	port: "5432"
-#	dbname: "yandexDB"
-#	password: "2002"
-#	sslmode: disable
 port: "8000"
 
-postgres:
-	username: "postgres"
-	host: "postgres_db"
-	port: "5432"
-	dbname: "postgres"
-	sslmode: disable
+db:
+    username: "postgres"
+    host: "localhost"
+    port: "5432"
+    dbname: "postgres"
+    sslmode: "disable"
