--- a/src/config/config.yml
+++ b/src/config/config.yml
@@ -2,7 +2,9 @@ port: "8080"
 
 db:
     username: "postgres"
+#    host: "localhost"
     host: "db"
     port: "5432"
     dbname: "postgres"
-    sslmode: "disable"
+    sslmode: disable
+    password: "password"
