--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,9 +2,7 @@ port: "8080"
 
 db:
     username: "postgres"
-#    host: "db"
-    host: "localhost"
+    host: "db"
     port: "5432"
-#    dbname: "postgres"
-    dbname: "db"
+    dbname: "postgres"
     sslmode: disable
